--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="web_code">
         <h4>浮风社区</h4>
         <p style="font-size: 12px;">集学习、兴趣交流于一体的社区(QQ频道)</p>
-        <img src="图片链接" alt="EnjoyToShare" />
+        <img src="https://s3.bmp.ovh/imgs/2021/11/07479a6b9407a573.png" alt="EnjoyToShare" />
       </div>
     </div>
 </div>
