--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>浮风社区 - QQ频道</title>
+  <title>慕念社区 - QQ频道</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="QQ频道" content="QQ频道">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=0.5">
@@ -24,7 +24,7 @@
     loadSidebar: true,
     subMaxLevel: 4,
     loadNavbar: true,
-    name: '浮风社区',
+    name: '慕念社区',
     themeColor: '#2196f3',
     externalLinkTarget: '_top',
     coverpage: true
